--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
         <section class="home">
             <div class="home-img">
-                <img src="/abdullah.com/img/img 2.jpg" alt="">
+                <img src="/abdullah/img/img3.jpg" alt="">
             </div>
             <div class="home-content">
                 <h1>We are  <span>Software engineer</span></h1>
