--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
             <nav>
                 <a href="#" class="active">home</a>
                 <a href="#" class="active">expeerience</a>
+            
                 <a href="#" class="active">skills</a>
                 <a href="#" class="active">education</a>
                 <a href="#" class="active">contact</a>
                 
         </header>
-        <section class="home">
-            <div class="home-img">
-                <img src="/abdullah.com/img/img4.jpg" alt="">
+        <section class="circle">
+            <div class="circle">
+                <img src="/abdullah.com/img/img4.jpg" alt="foto"class="circle">
             </div>
             <div class="home-content">
                 <h1>We are  <span>Software engineer</span></h1>
